Fixed invisible button

--- a/src/components/FileUploader/FileUploader.module.scss
+++ b/src/components/FileUploader/FileUploader.module.scss
@@ -3,7 +3,6 @@
   padding: 21px 24px;
   border-radius: 4px;
   border: 1px 0px 0px 0px;
-  opacity: 0px;
   border: 1px dashed #b0b0b0;
   background: #ffffff;
 }
